--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.4.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
     "prop-types": "^15.7.2",
